02-charts/api-gateway-service/templates/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  selector:
    app: books
  ports:
  - name: express-port
    protocol: TCP
    port: 80
    targetPort: 3900
