02-charts/api-gateway-service/templates/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
spec:
  ingressClassName: nginx
  rules:
    - http:
       paths:
       - backend:
          service:
            name: api-gateway-service
            port:
              number: 80
         path: /
         pathType: Prefix
